[metadata]
name = yibing 

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.8
# install_requires =
#     requests
#     importlib-metadata; python_version<"3.10"

# [options.extras_require]
# pdf = ReportLab>=1.2; RXP
# rest = docutils>=0.3; pack ==1.1, ==1.3

# [options.packages.find]
# exclude =
#     examples*
#     tools*
#     docs*
#     my_package.tests*